@@ -77,7 +77,16 @@ Para generar el JAR:
 
 Para ejecutar el JAR:
 
-    java -jar target/firmador.jar
+    cd target
+    java -jar firmador.jar
+
+
+## Ejecución en Java 16 y posteriores
+
+En caso de utilizar una versión de Java mayor o igual a la 16, para ejecutar el
+JAR:
+
+    java --add-exports=jdk.crypto.cryptoki/sun.security.pkcs11.wrapper=ALL-UNNAMED -jar firmador.jar
 
 
 ## Licencia
